--- a/public/viewer.html
+++ b/public/viewer.html
@@ -360,6 +360,7 @@
       console.log("drawobjects")
       // Player sprite fallback
       if (loaded.idle) {
+        console.log("player idle")
         ctx.drawImage(
           img,
           animations.currentFrame * animations.frameWidth,
@@ -462,6 +463,7 @@
   </script>
 </body>
 </html>
+
 
 
 
