--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Control Your Character</title>
+  <title>Game (Fixed World, Scaled View)</title>
 
   <style>
     html, body {
@@ -15,7 +15,7 @@
       background: #000;
     }
 
-    /* Twitch behind */
+    /* Twitch behind everything */
     #twitchBg {
       position: fixed;
       inset: 0;
@@ -26,20 +26,20 @@
       pointer-events: none;
     }
 
-    /* Canvas visually fullscreen, world stays fixed */
+    /* Canvas above Twitch */
     #game {
       position: fixed;
       inset: 0;
-      width: 50vw;
-      height: 50vh;
-      border: none;
-      outline: none;
-      z-index: 2;
+      width: 100vw;
+      height: 100vh;
+      z-index: 10;
       display: block;
+      border: 0;
+      outline: 0;
       image-rendering: pixelated;
+      background: rgba(0,0,0,0.01);
     }
 
-    /* Overlay fullscreen */
     #loginOverlay {
       position: fixed;
       inset: 0;
@@ -49,7 +49,7 @@
       align-items: center;
       justify-content: center;
       background: rgba(0,0,0,0.5);
-      z-index: 3;
+      z-index: 20;
       gap: 10px;
       padding: 20px;
       box-sizing: border-box;
@@ -71,6 +71,7 @@
 </head>
 
 <body>
+  <!-- Twitch embed (errors here won't stop the game) -->
   <iframe
     id="twitchBg"
     src="https://player.twitch.tv/?channel=eberhex&parent=interactive-website-9620.onrender.com&muted=true"
@@ -78,7 +79,7 @@
     frameborder="0">
   </iframe>
 
-  <!-- Playable area fixed at 1000x500 -->
+  <!-- Fixed playable world size -->
   <canvas id="game" width="1000" height="500" tabindex="0"></canvas>
 
   <div id="loginOverlay">
@@ -87,45 +88,45 @@
   </div>
 
   <script src="https://interactive-website-9620.onrender.com/socket.io/socket.io.js"></script>
-
   <script>
     console.log("GAME SCRIPT STARTED");
-window.onerror = (msg, src, line, col, err) => {
-  console.log("JS ERROR:", msg, "at", src, line + ":" + col, err);
-};
-    const socket = io("https://interactive-website-9620.onrender.com");
+    window.onerror = (msg, src, line, col, err) => {
+      console.log("JS ERROR:", msg, "at", src, line + ":" + col, err);
+    };
 
-    // Fixed playable world
+    // ===== Fixed playable world (DO NOT CHANGE) =====
     const WORLD_W = 1000;
     const WORLD_H = 500;
 
-    const canvas = document.getElementById('game');
-    const ctx = canvas.getContext('2d', { alpha: true });
-
-    // Lock internal resolution (do not change playable area)
+    const canvas = document.getElementById("game");
+    const ctx = canvas.getContext("2d");
     canvas.width = WORLD_W;
     canvas.height = WORLD_H;
     canvas.focus();
 
-    // Asset loading flags
+    // Safe socket (won't break game if socket fails)
+    let socket = null;
+    try {
+      if (typeof io === "function") socket = io("https://interactive-website-9620.onrender.com");
+    } catch (e) {
+      console.log("Socket init failed (safe):", e);
+    }
+
+    // ===== Load images safely with flags + error logging =====
     const loaded = { box: false, idle: false, run: false, coin: false };
 
-    // Assets
-    const box_1_img = new Image();
-    box_1_img.onload = () => loaded.box = true;
-    box_1_img.src = '/assets/obstacles/box_1.png';
+    function loadImage(src, flagName) {
+      const im = new Image();
+      im.onload = () => { loaded[flagName] = true; };
+      im.onerror = () => { console.log("IMAGE FAILED:", src); };
+      im.src = src;
+      return im;
+    }
 
-    const idleImg = new Image();
-    idleImg.onload = () => loaded.idle = true;
-    idleImg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png';
-
-    const runImg = new Image();
-    runImg.onload = () => loaded.run = true;
-    runImg.src = '/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png';
-
-    const coinImg = new Image();
-    coinImg.onload = () => loaded.coin = true;
-    coinImg.src = '/assets/obstacles/coin.png';
+    const box_1_img = loadImage("/assets/obstacles/box_1.png", "box");
+    const idleImg  = loadImage("/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Idle/Slime1_Idle_body.png", "idle");
+    const runImg   = loadImage("/assets/characters/craftpix-net-879657-free-slime-mobs-pixel-art-top-down-sprite-pack/PNG/Slime1/Run/Slime1_Run_body.png", "run");
+    const coinImg  = loadImage("/assets/obstacles/coin.png", "coin");
 
     let img = idleImg;
 
@@ -137,7 +138,7 @@ window.onerror = (msg, src, line, col, err) => {
       frameRow: 0
     };
 
-    // World objects
+    // World objects (always exist)
     const boxes = [
       {x: 0, y: 400, width: 20, height: 20},
       {x: 80, y: 450, width: 20, height: 20},
@@ -184,60 +185,73 @@ window.onerror = (msg, src, line, col, err) => {
       score: 0
     };
 
-    // Scale+center world into the current window (NO CROPPING)
+    // ===== IMPORTANT FIX: viewport size must never be 0 =====
+    function getViewportSize() {
+      const w = Math.max(1,
+        window.innerWidth || 0,
+        document.documentElement.clientWidth || 0,
+        document.body ? document.body.clientWidth : 0
+      );
+      const h = Math.max(1,
+        window.innerHeight || 0,
+        document.documentElement.clientHeight || 0,
+        document.body ? document.body.clientHeight : 0
+      );
+      return { w, h };
+    }
+
     function applyViewportTransform() {
-      const scale = Math.min(window.innerWidth / WORLD_W, window.innerHeight / WORLD_H);
-      const offsetX = (window.innerWidth - WORLD_W * scale) / 2;
-      const offsetY = (window.innerHeight - WORLD_H * scale) / 2;
+      const { w, h } = getViewportSize();
+      const scale = Math.min(w / WORLD_W, h / WORLD_H);
+      const offsetX = (w - WORLD_W * scale) / 2;
+      const offsetY = (h - WORLD_H * scale) / 2;
       ctx.setTransform(scale, 0, 0, scale, offsetX, offsetY);
+      return { scale, offsetX, offsetY, w, h };
     }
 
-    // Clear only the world canvas (reliable, avoids weird clears when scaled)
-    function clearWorld() {
+    function clearScreen() {
+      // Clear in identity space
       ctx.setTransform(1, 0, 0, 1, 0, 0);
-      ctx.clearRect(0, 0, WORLD_W, WORLD_H);
-      // Note: canvas is clipped to its own size anyway, so this is enough.
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      const { w, h } = getViewportSize();
+      ctx.clearRect(0, 0, w, h);
     }
 
-    window.addEventListener('resize', () => draw());
+    // ===== Login overlay =====
+    const overlay = document.getElementById("loginOverlay");
+    const input = document.getElementById("usernameInput");
+    const button = document.getElementById("usernameBtn");
+    button.addEventListener("click", () => {
+      const name = input.value.trim() || "Player1";
+      player.username = name;
 
-    // Login overlay
-    (function usernameprompt() {
-      const overlay = document.getElementById('loginOverlay');
-      const input = document.getElementById('usernameInput');
-      const button = document.getElementById('usernameBtn');
+      if (socket) {
+        socket.on("connect", () => socket.emit("new-player", { id: socket.id, name }));
+      }
+      overlay.style.display = "none";
+      canvas.focus();
+    });
 
-      button.addEventListener('click', () => {
-        const name = input.value.trim() || 'Player1';
-        player.username = name;
+    // Coin
+    let coin = null;
+    if (socket) {
+      socket.on("coin", data => coin = data);
+    }
 
-        // Emit once connected
-        socket.on('connect', () => {
-          socket.emit('new-player', { id: socket.id, name });
-        });
-
-        overlay.style.display = 'none';
-        canvas.focus();
-      });
-    })();
-
+    // Timing
     let lastTime = performance.now();
     let frameTimer = 0;
     const frameInterval = 0.1;
     let animationStopper = false;
 
-    let coin = null;
-    socket.on("coin", data => {
-      coin = data;
-    });
-
-    function update(deltaTime) {
-      frameTimer += deltaTime;
+    function update(dt) {
+      frameTimer += dt;
       if (frameTimer >= frameInterval) {
         animations.currentFrame = (animations.currentFrame + 1) % animations.frameCount;
         frameTimer = 0;
       }
 
+      // collisions
       for (const box of boxes) {
         const onBottom =
           player.y - player.height <= box.y - 1 &&
@@ -249,7 +263,7 @@ window.onerror = (msg, src, line, col, err) => {
           player.x + player.width > box.x &&
           player.x < box.x + box.width &&
           player.y + player.height <= box.y &&
-          player.y + player.height + player.Yv * deltaTime >= box.y;
+          player.y + player.height + player.Yv * dt >= box.y;
 
         const LeftSide =
           player.x + player.width >= box.x &&
@@ -277,37 +291,41 @@ window.onerror = (msg, src, line, col, err) => {
         if (RightSide) player.Xv = 80;
       }
 
+      // coin
       if (coin != null) {
-        const coin_touching =
+        const touching =
           player.x < coin.x + 10 &&
           player.x + player.width > coin.x &&
           player.y < coin.y + 10 &&
           player.y + player.height > coin.y;
 
-        if (coin_touching) {
+        if (touching) {
           coin = null;
           player.score++;
-          socket.emit("coin_taken");
+          if (socket) socket.emit("coin_taken");
         }
       }
 
+      // gravity
       if (!player.onGround) {
-        player.Yv += player.gravity * deltaTime;
-        player.y += player.Yv * deltaTime;
+        player.Yv += player.gravity * dt;
+        player.y += player.Yv * dt;
       }
 
+      // floor
       if (player.y + player.height >= WORLD_H) {
         player.y = WORLD_H - player.height;
         player.Yv = 0;
         player.onGround = true;
       }
 
+      // friction + idle
       if (player.onGround) {
-        if (player.jumping) player.Yforce += deltaTime;
+        if (player.jumping) player.Yforce += dt;
 
         if (player.Xv >= -29 && player.Xv <= 29 && player.running === false) {
           player.Xv = 0;
-          if (animationStopper === false) {
+          if (!animationStopper) {
             img = idleImg;
             player.action = "idle";
             animations.currentFrame = 0;
@@ -317,31 +335,45 @@ window.onerror = (msg, src, line, col, err) => {
           }
         }
 
-        if (player.running === false && player.Xv > 0) player.Xv -= player.friction * deltaTime;
-        else if (player.running === false && player.Xv < 0) player.Xv += player.friction * deltaTime;
+        if (!player.running && player.Xv > 0) player.Xv -= player.friction * dt;
+        else if (!player.running && player.Xv < 0) player.Xv += player.friction * dt;
       }
 
-      player.x += player.Xv * deltaTime;
+      // move X
+      player.x += player.Xv * dt;
 
-      if (player.x <= 0) {
-        player.x = 0;
-        player.Xv = 80;
-      } else if (player.x + player.width >= WORLD_W) {
-        player.x = WORLD_W - player.width;
-        player.Xv = -80;
-      }
+      if (player.x <= 0) { player.x = 0; player.Xv = 80; }
+      else if (player.x + player.width >= WORLD_W) { player.x = WORLD_W - player.width; player.Xv = -80; }
     }
 
-    function drawWorldObjects() {
+    function draw() {
+      clearScreen();
+      const vp = applyViewportTransform();
+
+      // VERY visible world background + border (you cannot miss it)
+      ctx.fillStyle = "rgba(0, 255, 255, 0.25)";
+      ctx.fillRect(0, 0, WORLD_W, WORLD_H);
+
+      ctx.strokeStyle = "yellow";
+      ctx.lineWidth = 4;
+      ctx.strokeRect(2, 2, WORLD_W - 4, WORLD_H - 4);
+
+      // Debug text proving transform values
+      ctx.fillStyle = "white";
+      ctx.font = "16px Arial";
+      ctx.textAlign = "left";
+      ctx.fillText(`VIEW: ${vp.w}x${vp.h}  scale:${vp.scale.toFixed(3)}  off:${vp.offsetX.toFixed(1)},${vp.offsetY.toFixed(1)}`, 10, 22);
+      ctx.fillText("If you see this, rendering is working.", 10, 42);
+
+      // Boxes (always draw something)
       if (loaded.box) {
-        for (const box of boxes) {
-          ctx.drawImage(box_1_img, box.x - 5, box.y - 5, box.width + 12, box.height + 12);
-        }
+        for (const b of boxes) ctx.drawImage(box_1_img, b.x - 5, b.y - 5, b.width + 12, b.height + 12);
       } else {
-        ctx.fillStyle = "rgba(255,255,255,0.25)";
-        for (const box of boxes) ctx.fillRect(box.x, box.y, box.width, box.height);
+        ctx.fillStyle = "white";
+        for (const b of boxes) ctx.fillRect(b.x, b.y, b.width, b.height);
       }
 
+      // Coin
       if (coin != null) {
         if (loaded.coin) ctx.drawImage(coinImg, coin.x, coin.y, 20, 20);
         else {
@@ -349,26 +381,8 @@ window.onerror = (msg, src, line, col, err) => {
           ctx.fillRect(coin.x, coin.y, 20, 20);
         }
       }
-    }
 
-    function draw() {
-      ctx.setTransform(1,0,0,1,0,0);
-ctx.clearRect(0,0,canvas.width,canvas.height);
-ctx.fillStyle = "rgba(0,255,255,0.3)";
-ctx.fillRect(0,0,1000,500);
-ctx.fillStyle = "yellow";
-ctx.font = "24px Arial";
-ctx.fillText("DRAW LOOP RUNNING", 10, 30);
-      clearWorld();
-      applyViewportTransform();
-
-      // faint background so you can see the world bounds
-
-      ctx.fillStyle = "rgba(0,0,0,0.25)";
-      ctx.fillRect(0, 0, WORLD_W, WORLD_H);
-
-      drawWorldObjects();
-      // Player sprite fallback
+      // Player (always draw something)
       if (loaded.idle) {
         ctx.drawImage(
           img,
@@ -379,47 +393,41 @@ ctx.fillText("DRAW LOOP RUNNING", 10, 30);
           animations.frameWidth, animations.frameHeight
         );
       } else {
-        ctx.fillStyle = "lime";
+        ctx.fillStyle = "red";
         ctx.fillRect(player.x, player.y, player.width, player.height);
       }
 
-      // Text
-      ctx.font = '16px Arial';
-      ctx.fillStyle = 'deepskyblue';
-      ctx.textAlign = 'center';
-      ctx.textBaseline = 'bottom';
-      ctx.fillText(player.username || "Player", player.x + player.width / 2, player.y - 5);
+      // HUD
+      ctx.fillStyle = "white";
+      ctx.textAlign = "left";
+      ctx.fillText(`Score: ${player.score}`, 10, WORLD_H - 10);
 
-      ctx.textAlign = 'left';
-      ctx.fillText("Current score: " + player.score, 10, WORLD_H - 10);
-
-      socket.emit("move", {
-        x: player.x,
-        y: player.y,
-        frameCount: animations.frameCount,
-        frameIndex: animations.currentFrame,
-        frameRow: animations.frameRow,
-        username: player.username,
-        emote: player.action,
-        score: player.score
-      });
+      if (socket) {
+        socket.emit("move", {
+          x: player.x, y: player.y,
+          frameCount: animations.frameCount,
+          frameIndex: animations.currentFrame,
+          frameRow: animations.frameRow,
+          username: player.username,
+          emote: player.action,
+          score: player.score
+        });
+      }
     }
 
-    function gameLoop(currentTime) {
-      const deltaTime = (currentTime - lastTime) / 1000;
-      lastTime = currentTime;
-
-      update(deltaTime);
+    function loop(t) {
+      const dt = (t - lastTime) / 1000;
+      lastTime = t;
+      update(dt);
       draw();
-
-      requestAnimationFrame(gameLoop);
+      requestAnimationFrame(loop);
     }
 
     // Input
-    canvas.addEventListener('keydown', e => {
+    canvas.addEventListener("keydown", (e) => {
       if (e.key === "ArrowRight" && player.onGround) {
         player.action = "run";
-        if (player.running === false) {
+        if (!player.running) {
           img = runImg;
           animations.currentFrame = 0;
           animations.frameCount = 8;
@@ -432,7 +440,7 @@ ctx.fillText("DRAW LOOP RUNNING", 10, 30);
 
       if (e.key === "ArrowLeft" && player.onGround) {
         player.action = "run";
-        if (player.running === false) {
+        if (!player.running) {
           img = runImg;
           animations.currentFrame = 0;
           animations.frameCount = 8;
@@ -440,17 +448,16 @@ ctx.fillText("DRAW LOOP RUNNING", 10, 30);
           animationStopper = false;
         }
         player.running = true;
-        player.Xv = -1 * player.speedMax;
+        player.Xv = -player.speedMax;
       }
 
       if (e.key === "ArrowUp") {
-        if (player.onGround === true) player.jumping = true;
+        if (player.onGround) player.jumping = true;
       }
     });
 
-    canvas.addEventListener('keyup', e => {
-      if (e.key === "ArrowRight") player.running = false;
-      if (e.key === "ArrowLeft") player.running = false;
+    canvas.addEventListener("keyup", (e) => {
+      if (e.key === "ArrowRight" || e.key === "ArrowLeft") player.running = false;
 
       if (e.key === "ArrowUp") {
         if (player.onGround) {
@@ -463,19 +470,13 @@ ctx.fillText("DRAW LOOP RUNNING", 10, 30);
       }
     });
 
-    // Keep focus on canvas
-    window.addEventListener('click', () => canvas.focus());
+    window.addEventListener("click", () => canvas.focus());
+    window.addEventListener("resize", () => draw());
 
-    // Start loop immediately
-    requestAnimationFrame(gameLoop);
+    requestAnimationFrame(loop);
   </script>
 </body>
 </html>
-
-
-
-
-
 
 
 
